proj page figured out z-index issue for links on tablet

--- a/global.css
+++ b/global.css
@@ -68,7 +68,7 @@ a:visited {
 
 .page-title-wrapper {
   position: absolute;
-  top: 6%;
+  top: 7%;
   right: 4%;
   pointer-events: none;
   font-size: 3.5vw;
